# dryco

./: LICENSE  README.md  pyproject.toml
.github/workflows/: all_tests.yml
dryco/: __init__.py
dryco/decorators/: __init__.py  main.py
src/decorators/: main.py
tests/: test_decorator_with_kwargs.py  test_method_not_allowed.py
tests/decorators/: main.py
